<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">GoKitchen</string>
    <string name="action_buttons">Buttons mode</string>
    <string name="action_gesture">Accessibility mode</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_ocr">Reading out the display...</string>
    <string name="text_hint">The text will appear here...</string>
    <string name="textButtonOCR">Read out OCR display values</string>
    <string name="ocr">OCR</string>
    <string name="title_activity_gesture">Place your gesture here</string>
    <string name="lowerPower">Reduce Power</string>
    <string name="risePower">Rise Power</string>
    <string name="bluetooth">Electric Hob Handling</string>
    <string name="switch_on_off">Power on</string>
    <string name="switch_bluetooth">Connect to the Hob</string>
    <string-array name="textStatus">
        <item>Disconnected</item>
        <item>Connecting...</item>
        <item>Connected successfully!</item>
        <item>Error, please try again :(</item>
        <item>Sending ON command...</item>
        <item>Electric HOB ON!</item>
        <item>Sending OFF Command...</item>
        <item>Electric HOB OFF!</item>
        <item>Rising power...</item>
        <item>Power Raised!</item>
        <item>Reducing power...</item>
        <item>Power Reduced!</item>
    </string-array>
    <string name="initital_log">Bluetooth Disconected</string>
    <string name="copyrigth">(CC) Marc Bayón [Universidad Autónoma de Madrid]</string>
    <string name="audio_ORCMode">Starting OCR Mode</string>
    <string name="audio_connected">Now you are connected to the Hob</string>
    <string name="audio_errorProtocol">Oh oh! There was a failure during sending the data. Please, make sure the receptor is power on and try to connect it again.</string>
    <string name="audio_errorBluetoth">Your Bluetooth is not switch on or the receptor is not paired. Please, configure it first and then try it again.</string>
    <string name="audio_disconnected">All right! Everything disconnected and switch off.</string>
    <string name="audio_HobOff">Hob Power Off</string>
    <string name="audio_HobPWUP">Rising the Power</string>
    <string name="audio_HobON">Hob Power on</string>
    <string name="audio_errorNotPWON">Please, connect first with the Hob and then power it on with the ON command.</string>
    <string name="audio_errorNotConnected">Please, connect the device first with the Hob.</string>
    <string name="audio_unknowGesture">hmmmm! Unknow Gesture Command. I can not guess it. Please, draw it again.</string>
    <string name="audio_unknowError">Oh! Oh! There was an unknow error. Please connect it again and try it one more time.</string>
    <string name="audio_HobPWDOWN">Reducing the Power</string>
    <string name="gesture_noBluetooth">Your device does not support bluetooth</string>
    <string name="gesture_OCRMode">OCR Mode</string>
    <string name="gesture_connected">Connected</string>
    <string name="gesture_ProtocolError">Protocol Error.</string>
    <string name="gesture_disconnect">Disconnected.</string>
    <string name="gesture_NotConnected">Please connect first with the Electronic HOB</string>
    <string name="audio_already_connected">You are already connected to the Hob. </string>
    <string name="audio_HobAlreadyOff">The hob was already off.</string>
</resources>
